[workspace]
members=[
    "bottle",
    "wg_stdlib",
    "configmgr",
    "error",
    "bottle",
    "bottle/parser", 
    "resource",
    "bottle/checker",
    "bottle/ast",
]
[package]
name = "wineglass"
version = "0.1.0"
edition = "2021"

[dependencies]
bottle = { path = "bottle" }
wg_stdlib = { path = "wg_stdlib" }
error = { path = "error" }
resource = { path = "resource" }
env_logger = "0.11.3"
log = "0.4.22"
configmgr = { path = "configmgr" }
parser = { path = "bottle/parser" }
typed-arena = "2.0.2"
nom_locate = "4.2.0"

[workspace.dependencies]
nom="7.1.3"
configmgr = { path = "configmgr" }
env_logger = "0.11.3"
log = "0.4.22"
serde = {version="1.0.215", features=["derive"] }
serde_json = "1.0.118"
typed-arena = "2.0.2"
nom_locate = "4.2.0"