[workspace]
members=[
    "packer",
    "wg_stdlib",
    "configmgr",
    "error",
    "packer",
    "packer/parser", 
    "resource",
    "packer/checker",
    "packer/ast",
]
[package]
name = "wineglass"
version = "0.1.0"
edition = "2021"

[dependencies]
bottle = { path = "packer" }
wg_stdlib = { path = "wg_stdlib" }
error = { path = "error" }
resource = { path = "resource" }
env_logger = "0.11.3"
log = "0.4.22"
configmgr = { path = "configmgr" }
parser = { path = "packer/parser" }
typed-arena = "2.0.2"
nom_locate = "4.2.0"

[workspace.dependencies]
nom="7.1.3"
configmgr = { path = "configmgr" }
env_logger = "0.11.3"
log = "0.4.22"
serde = {version="1.0.215", features=["derive"] }
serde_json = "1.0.118"
typed-arena = "2.0.2"
nom_locate = "4.2.0"
thiserror = "2.0.3"
slotmap = "1.0.7"
sha2 = "0.10.8"
